Fix spacing

--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: Helvetica, sans-serif;
+    height: 100%;
 }
 
 body {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    justify-content: space-between;
 
-    font-family: 'Helvetica Neue', Helvetica, sans-serif;
     background-color:var(--background-color);
     color: var(--text-color);
 }
@@ -192,7 +193,7 @@ div.hour {
 }
 
 div.week {
-    width: min-content;
+    width: fit-content;
     padding: 0 25px 0 25px;
 }
 
@@ -203,7 +204,9 @@ div.week {
 
 div.days {
     display: flex;
-    align-items: flex-start;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
     gap: 24px;
 }
 
